RESOLVED FIXED56848
Crash when calling PluginProxy::evaluaste on a destroyed plug-in
https://bugs.webkit.org/show_bug.cgi?id=56848
Summary Crash when calling PluginProxy::evaluaste on a destroyed plug-in
Anders Carlsson
Reported 2011-03-22 11:21:06 PDT
Crash when calling PluginProxy::evaluaste on a destroyed plug-in
Attachments
Patch (1.63 KB, patch)
2011-03-22 11:22 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-22 11:22:44 PDT
Anders Carlsson
Comment 2 2011-03-22 11:40:56 PDT
Adam Roben (:aroben)
Comment 3 2011-03-22 11:43:36 PDT
No test? :-(
Note You need to log in before you can comment on or make changes to this bug.