2011-03-22  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Crash when calling PluginProxy::evaluate on a destroyed plug-in
        https://bugs.webkit.org/show_bug.cgi?id=56848
        <rdar://problem/9168975>

        Return early if the NPObject doesn't exist anymore.

        * WebProcess/Plugins/PluginProxy.cpp:
        (WebKit::PluginProxy::evaluate):


Canonical link: https://commits.webkit.org/71510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81680 268f45cc-cd09-0410-ab3c-d52691b4dbfc